--- a/Defectively Standard/Defectively Standard.csproj
+++ b/Defectively Standard/Defectively Standard.csproj
@@ -8,10 +8,10 @@
     <Authors>Väinämö Lumikero</Authors>
     <Company>FΞSTIVΛL</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.3.0</Version>
-    <AssemblyVersion>0.0.3.0</AssemblyVersion>
-    <FileVersion>0.0.3.0</FileVersion>
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <Version>0.0.3.2</Version>
+    <AssemblyVersion>0.0.3.2</AssemblyVersion>
+    <FileVersion>0.0.3.2</FileVersion>
+    <PackageReleaseNotes>- Added ClientDisconnectedEvent and Exception.</PackageReleaseNotes>
     <Description>Defectively .NET Standard Library</Description>
     <PackageProjectUrl>https://github.com/defectively/defectively-standard</PackageProjectUrl>
     <RepositoryUrl>https://github.com/defectively/defectively-standard</RepositoryUrl>
