--- a/Defectively Standard/Defectively Standard.csproj
+++ b/Defectively Standard/Defectively Standard.csproj
@@ -8,11 +8,10 @@
     <Authors>Väinämö Lumikero</Authors>
     <Company>FΞSTIVΛL</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.3.3</Version>
-    <AssemblyVersion>0.0.3.3</AssemblyVersion>
-    <FileVersion>0.0.3.3</FileVersion>
-    <PackageReleaseNotes>- Added SessionId System to allow multiple Connections from the same Endpoint
-- Changed Server.Start function name to StartAsync</PackageReleaseNotes>
+    <Version>0.0.3.4</Version>
+    <AssemblyVersion>0.0.3.4</AssemblyVersion>
+    <FileVersion>0.0.3.4</FileVersion>
+    <PackageReleaseNotes>- Fixed Guid generation poviding only empty Guids.</PackageReleaseNotes>
     <Description>Defectively .NET Standard Library</Description>
     <PackageProjectUrl>https://github.com/defectively/defectively-standard</PackageProjectUrl>
     <RepositoryUrl>https://github.com/defectively/defectively-standard</RepositoryUrl>
